[package]
name = "clockbot"
version = "0.1.0"
edition = "2024"

[dependencies]
serenity = { version = "0.12", features = ["client", "gateway", "model", "framework"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "any", "sqlite", "postgres"] }
chrono = "0.4"
chrono-tz = "0.10"
dotenv = "0.15"
anyhow = "1"
regex = "1"
once_cell = "1"

[dev-dependencies]
tempfile = "3"
